logs/dag_id=kolesa_dag_2/run_id=manual__2024-04-14T085451.288059+0000/task_id=create_table/attempt=1.log
[2024-04-14T08:59:34.511+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: kolesa_dag_2.create_table manual__2024-04-14T08:54:51.288059+00:00 [queued]>
[2024-04-14T08:59:34.527+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: kolesa_dag_2.create_table manual__2024-04-14T08:54:51.288059+00:00 [queued]>
[2024-04-14T08:59:34.529+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 1
[2024-04-14T08:59:34.563+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_table> on 2024-04-14 08:54:51.288059+00:00
[2024-04-14T08:59:34.571+0000] {standard_task_runner.py:60} INFO - Started process 1501 to run task
[2024-04-14T08:59:34.583+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'kolesa_dag_2', 'create_table', 'manual__2024-04-14T08:54:51.288059+00:00', '--job-id', '474', '--raw', '--subdir', 'DAGS_FOLDER/kolesa_from_csv.py', '--cfg-path', '/tmp/tmprqcwdb7_']
[2024-04-14T08:59:34.588+0000] {standard_task_runner.py:88} INFO - Job 474: Subtask create_table
[2024-04-14T08:59:34.702+0000] {task_command.py:423} INFO - Running <TaskInstance: kolesa_dag_2.create_table manual__2024-04-14T08:54:51.288059+00:00 [running]> on host e8a1e0443283
[2024-04-14T08:59:37.003+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='kolesa_dag_2' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-14T08:54:51.288059+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-14T08:54:51.288059+00:00'
[2024-04-14T08:59:37.004+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS kolesa_parsing(
    mark VARCHAR(255) NOT NULL,
    model VARCHAR(255) NOT NULL,
    year INT,
    price decimal,
    description VARCHAR(2000),
    city VARCHAR(255),
    generation VARCHAR(255),
    body VARCHAR(255),
    engine_volume decimal,
    mileage decimal,
    unit VARCHAR(255),
    transmission VARCHAR(255),
    drive_unit VARCHAR(255),
    steering_wheel VARCHAR(255),
    color VARCHAR(255),
    is_customized BOOLEAN
)

'mark', 'model', 'year', 'price', 'description', 'city', 'generation',
    'body', 'engine_volume', 'mileage', 'unit', 'transmission', 'drive_unit',
    'steering_wheel', 'color', 'is_customized'
[2024-04-14T08:59:37.017+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-14T08:59:37.029+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-14T08:59:37.034+0000] {sql.py:457} INFO - Running statement: CREATE TABLE IF NOT EXISTS kolesa_parsing(
    mark VARCHAR(255) NOT NULL,
    model VARCHAR(255) NOT NULL,
    year INT,
    price decimal,
    description VARCHAR(2000),
    city VARCHAR(255),
    generation VARCHAR(255),
    body VARCHAR(255),
    engine_volume decimal,
    mileage decimal,
    unit VARCHAR(255),
    transmission VARCHAR(255),
    drive_unit VARCHAR(255),
    steering_wheel VARCHAR(255),
    color VARCHAR(255),
    is_customized BOOLEAN
)

'mark', 'model', 'year', 'price', 'description', 'city', 'generation',
    'body', 'engine_volume', 'mileage', 'unit', 'transmission', 'drive_unit',
    'steering_wheel', 'color', 'is_customized', parameters: None
[2024-04-14T08:59:37.040+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'mark'"
LINE 20: 'mark', 'model', 'year', 'price', 'description', 'city', 'ge...
         ^

[2024-04-14T08:59:37.066+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=kolesa_dag_2, task_id=create_table, execution_date=20240414T085451, start_date=20240414T085934, end_date=20240414T085937
[2024-04-14T08:59:37.090+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 474 for task create_table (syntax error at or near "'mark'"
LINE 20: 'mark', 'model', 'year', 'price', 'description', 'city', 'ge...
         ^
; 1501)
[2024-04-14T08:59:37.130+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-14T08:59:37.155+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-14T08:59:37.179+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
